--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>atul's Website </title>
+    <body>
+        <h1>Atul's Portfolio</h1>
+        <h2>I am a web developer</h2>
+        <hr />
+        <!-- TODO 5: Add a link to the project pages -->
+       <h3><a href="./public/movie-ranking.html">movie ranking project</a></h3>
+        <img src="./public/Images/Movie_ranking.png" height="200"/></br>
+       <h3> <a href="./public/birthday-invite.html">birthday Invite project</a></h3>
+        <img src="./public/Images/Birthday.png" height="200" /></br>
+        <hr />
+        <a href="./public/about.html">About me</a>
+        <a href="./public/contact.html">Contact me</a>
+    </body>
+</head>
+</html>
+
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
@@ -6,7 +28,6 @@
 
 <!-- TODO 4: Add titles/subtitles etc. -->
 
-<!-- TODO 5: Add a link to the project pages -->
 
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
